2010-01-21 Erwin Waterlander <waterlan@xs4all.nl>
	* version 4.1.1
	* Fix compilation on FreeBSD.
	* Changed home page URL to http://www.xs4all.nl/~waterlan/dos2unix.html

2009-12-28 Erwin Waterlander <waterlan@xs4all.nl>
	* version 4.1
	* Automatically skip binary files.
	* Automatically skip non-regular files.
	* New option: -f --force: Force conversion of all files.
	* Option -h: Print options in alphabetical order.
	* Update manual.
	* ISO mode:
	  - Non-convertable characters are converted to a dot.
	  - Fixed wrong conversion of Interpunct.
	  - Don't convert ASCII control characters
	    DC4 (Pilcrow, 0x14) and NAK (Section-sign, 0x15).

2009-12-21 Erwin Waterlander <waterlan@xs4all.nl>
	* version 4.0.1
	* man page improvements: Thanks to Jari Aalto.
	  - Replace hyphens with minus signs (look like dashes) where needed.
	  - Options in alphabetical order.
	* man page: Update ISO mode information.
	* unix2dos.c: Option -V prints localedir used.
	* unix2dos.c: Localedir can be overruled with environment variable
	  UNIX2DOS_LOCALEDIR.
	* Fixed two wrong conversions in ISO mode:
	  - Greek mu.
	  - Closing guillemet (angle quotation mark, >>).
	* Port to OS/2 Warp: Thanks to Elbert Pol.
	* Makefiles: Added target 'strip'.

2009-12-15 Erwin Waterlander <waterlan@xs4all.nl>
	* version 4.0
	* Added internationalisation using gettext.
	* Added Dutch translation.
	* Ported to Win32 using Mingw32 <http://www.mingw.org/>
	* Ported to DOS using DJGPP <http://www.delorie.com/djgpp/>
	* Fixed problem in DOS/Windows stdio mode.
	* New option -L/--license that prints software license.
	* Code cleanup
	* Update manual

2009-12-04 Erwin Waterlander <waterlan@xs4all.nl>
	* version 2.3
	* version.mk: New file.
	* README: New file.
	* INSTALL: New file.
	* Makefile: Makefile according GNU standards.
	* ChangeLog : New file.
	* Applied all patches from RedHat:
	  - use mkstemp i.s.o. mktemp: Nov 17 2000 Tim Powers <timp@redhat.com> 