@@ -1,2 +1,2 @@
-UNIX2DOS_VERSION = 4.1.1
-UNIX2DOS_DATE = 2010-01-21
+UNIX2DOS_VERSION = 4.1.2-beta1
+UNIX2DOS_DATE = 2010-01-22
